fixed scroll on mobile

--- a/src/client/styles/views/_material-details.scss
+++ b/src/client/styles/views/_material-details.scss
@@ -202,6 +202,9 @@
         padding-top: 8px;
       }
     }
+    .material-details-content-name-search {
+      font-size: 22px;
+    }
     &-family {
       font-size: 16px;
       color: #133146;
